// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments when there are comments renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "borderTopRightRadius": 5,
      "flex": 1,
      "width": "100%",
    }
  }
>
  <ScrollViewMock>
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.85)",
          "borderRadius": 5,
          "margin": 10,
          "padding": 10,
        }
      }
    >
      <Title
        text="A simple string"
      />
    </View>
    <View
      style={
        Object {
          "marginHorizontal": 10,
          "marginVertical": 20,
        }
      }
    >
      <Title
        text="1 Comentários - 1 Tópicos"
      />
    </View>
    <View>
      <FlatList
        data={
          Array [
            Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                },
                "name": "May F",
              },
              "body": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "dateCreated": 2019-01-01T00:00:00.000Z,
              "id": "21097",
              "replies": Array [],
              "title": "Meu pai fez o que ela mandou…",
              "totalReplies": 0,
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
    </View>
  </ScrollViewMock>
  <TextField
    buttonText="Comentar"
    inputText="Adicione o seu comentário..."
    onChangeText={[Function]}
    onSubmit={[Function]}
    value=""
  />
</View>
`;

exports[`Comments when there are no comments renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.85)",
      "borderTopRightRadius": 5,
      "flex": 1,
      "width": "100%",
    }
  }
>
  <ScrollViewMock>
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.85)",
          "borderRadius": 5,
          "margin": 10,
          "padding": 10,
        }
      }
    >
      <Title
        text="A simple string"
      />
    </View>
    <View
      style={
        Object {
          "marginHorizontal": 10,
          "marginVertical": 20,
        }
      }
    >
      <Title
        text="0 Comentários - 0 Tópicos"
      />
    </View>
    <View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "paddingVertical": 20,
          }
        }
      >
        <Title
          text="Nenhum comentário ainda - faça o primeiro!"
        />
      </View>
      <FlatList
        data={Array []}
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        updateCellsBatchingPeriod={50}
        windowSize={21}
      />
    </View>
  </ScrollViewMock>
  <TextField
    buttonText="Comentar"
    inputText="Adicione o seu comentário..."
    onChangeText={[Function]}
    onSubmit={[Function]}
    value=""
  />
</View>
`;
